# aether-player

./: .gitignore  README.md  package.json  svelte.config.js  vite.config.js
.github/workflows/: build.yml
src/: app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  queue.rs  state.rs  traits.rs
src-tauri/src/commands/: config.rs  lastfm.rs  library.rs  mod.rs  player.rs  queue.rs  tidal.rs
src-tauri/src/models/: config.rs  entities.rs  mod.rs  player.rs
src-tauri/src/players/: mod.rs  mpv.rs
src-tauri/src/providers/: local.rs  mod.rs  subsonic.rs  tidal.rs
src-tauri/src/util/: discord.rs  lastfm.rs  mod.rs
src/lib/: bindings.ts  hooks.ts  util.ts
src/lib/components/: Button.svelte  ConfirmModal.svelte  Image.svelte  Modal.svelte  Portal.svelte  Sidebar.svelte  TitleBar.svelte  Toaster.svelte  TooltipPopup.svelte
src/lib/components/player/: AlbumCard.svelte  ArtistCard.svelte  AudioPlayer.svelte  TrackList.svelte
src/lib/components/popups/: ContextMenuPopup.svelte
src/lib/hooks/: contextMenu.ts  index.ts  tooltip.ts  util.ts
src/lib/stores/: config.svelte.ts  confirm.svelte.ts  resource.svelte.ts  shortcuts.svelte.ts  theme.svelte.ts  toast.svelte.ts
src/lib/stores/player/: media.svelte.ts  player.svelte.ts  queue.svelte.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  layout.css
src/routes/explore/: +page.svelte
src/routes/playground/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/settings/appearance/: +page.svelte
src/routes/settings/general/: +page.svelte
src/routes/settings/sources/: +page.svelte
