[package]
name = "aether-player"
version = "0.1.0"
description = "Aether Player"
authors = ["vMohammad"]
edition = "2021"

[lib]
name = "aether_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
