[package]
name = "aether-player"
version = "0.1.1"
description = "Aether Player"
authors = ["vMohammad"]
edition = "2021"

[lib]
name = "aether_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.21", features = ["chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
tokio = { version = "1", features = ["full"] }
rand = "0.9"
libmpv2 = { version = "5" }
anyhow = "1.0"
tempfile= "3"
async-trait = "0.1"
log = "0.4"
lofty = "0.22"
jwalk = "0.8.1"
tauri-plugin-log = "2.7.1"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
uuid = { version = "1.19.0", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
dirs = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
tauri-plugin-dialog = "2"
rayon = "1.8"
sha2 = "0.10"
reqwest = { version = "0.13.1", features = ["json", "query", "form"] }
md5 = "0.8.0"
futures = "0.3.31"
moka = { version = "0.12", features = ["future"] }
base64 = "0.21"
urlencoding = "2.1"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-prevent-default = "4"
discord-rich-presence = "1"
tauri-plugin-updater = "2"
